Attemped to prevent user select on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,6 +7,10 @@
 
 body {
 	font-family: "Open Sans";
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .noanimation {
